login template css issue fixed which was related to bootstap version

--- a/customer-app/src/app/customers/dashboard/dashboard.component.html
+++ b/customer-app/src/app/customers/dashboard/dashboard.component.html
@@ -1,5 +1,7 @@
-<div style="padding:20px;float:right;">
-
+<div style="padding:20px;">
+<p>
+    Put the template here with HFN and put template condition for all.Integrate Social Login and registration.Once client signup separate db will be created for each.
+</p>
     <button (click)="logout()">Logout</button>
     
 </div>
