--- a/customer-app/src/app/customers/login/login.component.html
+++ b/customer-app/src/app/customers/login/login.component.html
@@ -23,7 +23,7 @@
       </div>
       <div class="row">
         <div class="col-xs-8">
-           <div class="checkbox icheck">
+           <div class="checkbox icheck" style="margin-left:20px;">
             <label>
               <input type="checkbox" class="icheckbox_square-blue">&nbsp;&nbsp;<span style="text-align:center">Remember Me</span>
             </label>
@@ -38,17 +38,17 @@
       </div>
     </form>
 
-    <!-- <div class="social-auth-links text-center">
+     <div class="social-auth-links text-center">
       <p>- OR -</p>
       <a href="#" class="btn btn-block btn-social btn-facebook btn-flat"><i class="fa fa-facebook"></i> Sign in using
         Facebook</a>
       <a href="#" class="btn btn-block btn-social btn-google btn-flat"><i class="fa fa-google-plus"></i> Sign in using
         Google+</a>
-    </div> -->
+    </div>
     <!-- /.social-auth-links -->
 
-    <!-- <a href="#">I forgot my password</a><br>
-    <a href="register.html" class="text-center">Register a new membership</a> -->
+     <a href="#">I forgot my password</a><br>
+    <a href="register.html" class="text-center">Register a new membership</a> 
 
   </div>
   <!-- /.login-box-body -->
