--- a/customer-app/src/app/customers/customer-left-side/customer-left-side.component.html
+++ b/customer-app/src/app/customers/customer-left-side/customer-left-side.component.html
@@ -37,6 +37,16 @@
           <li><a routerLink="dashboard2"><i class="fa fa-circle-o"></i> Dashboard v2</a></li>
         </ul> -->
       </li>
+       <li class="treeview">
+        <a routerLink="/customer/list">
+            <i class="fa fa-users"></i>
+            <span>Customers</span>
+            <span class="pull-right-container">
+              <span class="label label-primary pull-right">4</span>
+            </span>
+          </a>
+        
+      </li>
       <li class="treeview">
         <a routerLink="/customer/employees">
             <i class="fa fa-users"></i>
