--- a/customer-app/src/app/customers/customer-list/customer-list.component.html
+++ b/customer-app/src/app/customers/customer-list/customer-list.component.html
@@ -1,3 +1,22 @@
-<p>
-  customer-list works!
-</p>
+<app-customer-header></app-customer-header>
+<app-customer-left-side></app-customer-left-side>
+<div class="content-wrapper">
+  <!-- Content Header (Page header) -->
+  <section class="content-header">
+    <h1>
+      Customers
+      <small>Management</small>
+    </h1>
+    <ol class="breadcrumb">
+      <li><a href="/"><i class="fa fa-dashboard"></i> Dashboard</a></li>
+      <li class="active">Customers</li>
+    </ol>
+  </section>
+
+  <!-- Main content -->
+  <section class="content">
+  <p>Customer List Comes here from users db</p>
+  </section>
+  <!-- /.content -->
+</div>
+<app-customer-footer></app-customer-footer>
